# MeshTrimmer

./: CMakeLists.txt  mesh_trimmer.h  mesh_trimmer_test.cc
